--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "data_dir": "/mnt/BigHD_1/loucas/data-w-cubes/",
+  "data_dir": "/mnt/BigHD_1/loucas/data/",
   "data_portion": 0.4,
   "episode_length": 200,
   "batch_size": 32,
@@ -10,6 +10,7 @@
   "lr": 0.001,
   "stride": 1,
   "log_every_n_steps": 10,
+  "target_feature_indices": [1, 2, 3],
   "transformer": {
     "num_encoder_layers": 2,
     "num_decoder_layers": 2,
