--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "data_dir": "/work/tc064/tc064/s2567498/data-w-camera/",
-  "resnet_checkpoint":"/work/tc064/tc064/s2567498/resnet18-f37072fd.pth",
+  "resnet_checkpoint": "/work/tc064/tc064/s2567498/resnet18-f37072fd.pth",
   "data_portion": 1.0,
   "episode_length": 200,
-  "batch_size": 8,
+  "batch_size": 4,
   "num_workers": 0,
   "max_epochs": 1,
   "prediction_distance": 1,
@@ -11,7 +11,11 @@
   "lr": 0.001,
   "stride": 1,
   "log_every_n_steps": 1,
-  "target_feature_indices": [7, 8, 9],
+  "target_feature_indices": [
+    7,
+    8,
+    9
+  ],
   "resnet_features": 15,
   "transformer": {
     "num_encoder_layers": 3,
