--- a/config.json
+++ b/config.json
@@ -1,13 +1,7 @@
 {
-<<<<<<< HEAD
   "data_dir": "data-w-camera",
   "resnet_checkpoint": "resnet18-f37072fd.pth",
   "data_portion": 1.0,
-=======
-  "data_dir": "/work/tc064/tc064/s2567498/data-w-camera/",
-  "resnet_checkpoint": "/work/tc064/tc064/s2567498/resnet18-f37072fd.pth",
-  "data_portion": 0.1,
->>>>>>> 699ab08bdf402c0e56ffe39897d61e30d283c8d3
   "episode_length": 200,
   "batch_size": 8,
   "num_workers": 0,
@@ -15,14 +9,11 @@
   "prediction_distance": 1,
   "window_size": 30,
   "start_lr": 0.01,
-  "end_lr":0.001,
-  "activation":"tanh",
+  "end_lr": 0.001,
+  "activation": "tanh",
   "stride": 4,
   "log_every_n_steps": 5,
-  "target_feature_indices": [
-    7,
-    8
-  ],
+  "target_feature_indices": [7, 8],
   "resnet_features": 15,
   "transformer": {
     "num_encoder_layers": 3,
