--- a/lightning_logs/mamba/version_1/hparams.yaml
+++ b/lightning_logs/mamba/version_1/hparams.yaml
@@ -1,23 +1,22 @@
-activation: ''
-batch_size: 6
+activation: tanh
+batch_size: 12
 d_conv: 4
 d_model: 80
 d_state: 16
-data_dir: /work/tc064/tc064/s2567498/data-w-camera/
-data_portion: 0.02
+data_dir: /work/tc064/tc064/s2567498/data-w-camera
+data_portion: 0.2
 end_lr: 0.001
-episode_length: 200
+episode_length: 150
 expand: 2
 name: mamba
 num_workers: 0
 prediction_distance: 1
 resnet_checkpoint: /work/tc064/tc064/s2567498/resnet18-f37072fd.pth
 resnet_features: 15
-start_lr: 0.1
+start_lr: 0.01
 stride: 1
 target_feature_indices:
 - 7
 - 8
-- 9
 use_cpu: false
-window_size: 20
+window_size: 30
