--- a/lightning_logs/rnn/version_0/hparams.yaml
+++ b/lightning_logs/rnn/version_0/hparams.yaml
@@ -1,9 +1,10 @@
-batch_size: 4
+activation: tanh
+batch_size: 8
 d_model: 80
-data_dir: /work/tc064/tc064/s2567498/data-w-camera/
+data_dir: /work/tc064/tc064/s2567498/data-w-camera
 data_portion: 1.0
+end_lr: 0.001
 episode_length: 200
-lr: 0.001
 name: rnn
 num_layers: 2
 num_workers: 0
@@ -11,10 +12,10 @@ prediction_distance: 1
 resnet_checkpoint: /work/tc064/tc064/s2567498/resnet18-f37072fd.pth
 resnet_features: 15
 rnn_hidden_size: 128
-stride: 1
+start_lr: 0.01
+stride: 4
 target_feature_indices:
 - 7
 - 8
-- 9
 use_cpu: false
-window_size: 20
+window_size: 30
