--- a/config.json
+++ b/config.json
@@ -1,33 +1,36 @@
 {
   "data_dir": "data-w-camera",
   "resnet_checkpoint": "resnet18-f37072fd.pth",
-  "data_portion": 0.2,
+  "data_portion": 1,
   "episode_length": 200,
-  "batch_size": 4,
+  "batch_size": 12,
   "num_workers": 0,
   "max_epochs": 2,
   "prediction_distance": 1,
   "window_size": 30,
-  "start_lr": 0.01,
+  "start_lr": 0.005,
   "end_lr": 0.001,
   "activation": "tanh",
   "stride": 1,
-  "log_every_n_steps": 2,
-  "target_feature_indices": [7, 8],
+  "log_every_n_steps": 20,
+  "target_feature_indices": [
+    6,
+    7
+  ],
   "resnet_features": 15,
   "transformer": {
-    "num_encoder_layers": 3,
-    "num_decoder_layers": 3,
-    "nhead": 10,
-    "dim_feedforward": 128
+    "num_encoder_layers": 4,
+    "num_decoder_layers": 4,
+    "nhead": 8,
+    "dim_feedforward": 256
   },
   "mamba": {
-    "d_state": 16,
-    "d_conv": 4,
-    "expand": 2
+    "d_state": 256,
+    "d_conv": 32,
+    "expand": 8
   },
   "rnn": {
-    "rnn_hidden_size": 128,
-    "num_layers": 2
+    "rnn_hidden_size": 256,
+    "num_layers": 5
   }
 }
